--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
   <header id="header_wrapper">
     <div class="container">
       <div class="header_box">
-        <div class="logo"><a href="https://markgsheppard.github.io/SahmRule/"><img src="img/logo.png" alt="logo"
-              style="width: 120px; height: auto;"></a></div>
+        <div class="logo"><a href="https://markgsheppard.github.io/SahmRule/">
+          <img src="img/logo.png" alt="logo" style="width:300px;height: auto;padding-top: 7px;">
+        </a></div>
         <nav class="navbar navbar-inverse" role="navigation">
           <div class="navbar-header">
             <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav">
